<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parent"
        >

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/activity_horizontal_margin"
            />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:padding="4dp"
            android:background="@color/colorPrimary"
            android:layout_margin="@dimen/activity_horizontal_margin">




            <ImageView

                android:id="@+id/avatar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_shopping_cart_white_24dp"
                android:layout_gravity="center_vertical"

                />
            <LinearLayout
                android:layout_width=".50dp"
                android:layout_height="40dp"
                android:layout_marginLeft="3dp"
                android:background="#fff"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".85"
                android:layout_gravity="center_vertical"
                android:id="@+id/product_name"
                android:textSize="14sp"
                android:text="@string/purchase"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/shopping_cart">

            <TableRow  android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:layout_weight=".55"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/qty"
                    android:layout_weight=".15"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_price"
                    android:layout_weight=".15"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/line_total"
                    android:layout_weight=".15"
                    android:layout_gravity="center"
                    />
            </TableRow>
        </TableLayout>


    <Button
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:padding="3dp"
        android:text="@string/purchase"
        android:layout_gravity="right"
        android:background="@drawable/disabled_state"
        android:enabled="false"
        android:id="@+id/btn_purchase"
        />



    </LinearLayout>


